fixed contrast

--- a/lesson-3/css/normalize.css
+++ b/lesson-3/css/normalize.css
@@ -93,7 +93,7 @@ footer {
 }
 
 footer a {
-    color:rgb(255, 238, 0)
+    color: black;
 }
 
 
